Changed: Album Tab Page, minor CSS thumbnail <li> alignment changes,          Media Tab page, correct audio thumbnail.
git-svn-id: svn://svn.webtrees.net/trunk/phpGedView@4544 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/modules/lightbox/css/album_page.css
+++ b/modules/lightbox/css/album_page.css
@@ -144,8 +144,8 @@ float: left;
 }
 
 li.li_norm{
-/* border: 2px solid transparent; */
-border: 2px; 
+border: 2px solid transparent; 
+/* border: 2px;  */
 }
 
 li.li_new {
